# clip_mvp_app

./: .gitignore  README.md  start.bat
CPP_apka/: CMakeLists.txt  main.cpp
clip_fast_api/: .gitignore  changes.txt  model_manager.ipynb  performance_test.py  rebuild_db.py  requirements.txt  run.py  run_ngrok_server.bat  start_server.py
clip_fast_api/app/: __init__.py  clip_model.py  config.py  database_manager.py  embedding_store.py  image_preprocessor.py  main.py  server.py  text_preprocessor.py
search_client/: CMakeLists.txt  main.cpp
